v1 bug fix - center alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-body {
+#root {
   display: grid;
   place-items: center;
+  min-height: 100vh;
 }
